--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -1,1 +1,28 @@
-<p>welcome-page works!</p>
+<div class="container">
+  <div class="main-text">
+    <p>This is the
+      <span class="red">Red</span>
+      &
+      <span class="green">Green</span>
+      Game.</p>
+    <p>Please check the
+      <a routerLink="/rules" routerLinkActive="active">rules</a>
+      to learn how to play it.
+    </p>
+    <p>If you already know the rules, just start
+      <a routerLink="/game" routerLinkActive="active">playing</a>
+      it!!
+    </p>
+    <p>
+      You can also check your
+      <a routerLink="/score" routerLinkActive="active">score</a>
+      here.
+    </p>
+
+
+
+  </div>
+  <!--main-text-->
+
+</div>
+<!--container-->
